update buttons / links within header to use updated UI/Button / UI/Link; ensure links within product category popover wrap

--- a/UI/Source/Header/Header.scss
+++ b/UI/Source/Header/Header.scss
@@ -481,6 +481,7 @@
 			padding: 0;
 			text-align: left;
 			width: 100%;
+			white-space: normal;
 
 			&:hover {
 				text-decoration: underline;
